--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 Flask==2.3.3
 Flask-RESTful==0.3.9
+Flask-HTTPAuth==4.8.0
 Flask-Cors==3.0.10
 google-cloud-datastore==2.15.1
+google-cloud-storage==2.11.0
 boto3==1.33.13
